--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kings&family=Niconne&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
-@import url('https://fonts.googleapis.com/css2?family=Kings&family=Niconne&display=swap');
 
 
 @custom-variant dark (&:is(.dark *));
@@ -108,39 +108,13 @@
 
 
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  font-family: "Kings", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
+  body {
+    @apply bg-background text-foreground;
+    font-weight: 400;
+    font-style: normal;
+  }
 button:hover {
   @apply transform transition-all duration-400 scale-[1.07] ease-in-out;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @theme inline {
@@ -188,4 +162,7 @@ button:focus-visible {
   body {
     @apply bg-background text-foreground;
   }
+}
+.name{
+      font-family: "Kings";
 }
